--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-responsive-masonry": "^2.7.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "swiper": "^11.2.6",
@@ -66,6 +67,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-responsive-masonry": "^2.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
