--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^12.7.4",
     "gsap": "latest",
     "input-otp": "1.4.1",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -65,6 +66,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
