--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.16.0",
